# books-we-love

./: .dockerignore  .gitignore  Dockerfile  README.md  lookup-book.json  post-book.json  pyproject.toml  requirements.txt
books_we_love/: __init__.py  api_client.py  datastore.py  downloader.py  tracker.py
books_we_love/cli/: __init__.py  __main__.py  book.py  init.py  output.py  utils.py
tests/: __init__.py  test_cli_book_list.py  test_cli_book_reset.py  test_cli_book_show.py  test_cli_init.py  test_cli_process.py
